--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>Valentine 💖</title>
     <link rel="stylesheet" href="index.css">
+    <meta name="viewport" content="width=device-width,
+    initial-scale=1.0">
 </head>
 
 <body>
@@ -28,5 +30,6 @@
 
     <script src="index.js"></script>
 </body>
+
 
 </html>
