--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
 <body>
 
-     <!-- Background Music
+    Background Music
     <audio id="bgMusic" loop>
         <source src="music.mpeg" type="audio/mpeg">
-    </audio> -->
+    </audio> 
 
     <div class="container">
         <h1>Will you be my Valentine? 💘</h1>
-        <h2>💖 My Dear 💖</h2>
+        <h2>💖 My Dear 🐼💖</h2>
 
         <div class="buttons">
             <button id="yesBtn">YES 💖</button>
@@ -33,4 +33,5 @@
 
 
 </html>
+
 
