--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    Background Music
+    <!-- Background Music -->
     <audio id="bgMusic" loop>
         <source src="music.mpeg" type="audio/mpeg">
     </audio> 
@@ -33,5 +33,6 @@
 
 
 </html>
+
 
 
